WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257617
Fix CSS scrollbar color interaction with legacy scrollbar pseudos
https://bugs.webkit.org/show_bug.cgi?id=257617
Summary
Fix CSS scrollbar color interaction with legacy scrollbar pseudos
Luke Warlow
Reported
2023-06-01 13:35:45 PDT
This bug will track how CSS that has scrollbar-color and ::-webkit-scrollbar styles works. Chromiums implementation makes the standard properties take precedence over the legacy pseudos so this behaviour should be matched.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-08 13:36:22 PDT
<
rdar://problem/110484332
>
Luke Warlow
Comment 2
2023-06-22 09:32:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15196
EWS
Comment 3
2023-06-22 13:21:25 PDT
Committed
265423@main
(f056156a42b6): <
https://commits.webkit.org/265423@main
> Reviewed commits have been landed. Closing PR #15196 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug